[package]
name = "stockin_api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stockin_api"
test = false

[[bin]]
name = "seed"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7", "serde"] }
