[package]
name = "stockin_api"
version = "0.1.0"
edition = "2021"
default-run = "api"

[lib]
doctest = false

[[bin]]
name = "stockin_api"
test = false

[[bin]]
name = "api"
test = false

[[bin]]
name = "seed"
test = false

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
scraper = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["auth"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
assert_json = { version = "0.1.0" }
http-body-util = { version = "0.1.0" }
tower = { version = "0.4", features = ["util"] }
